# django-chapa

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: settings.py  urls.py
django_chapa/: admin.py  api.py  apps.py  models.py  urls.py  views.py
django_chapa/migrations/: 0001_initial.py  0002_chapatransaction_checkout_url_and_more.py  0003_remove_chapatransaction_event.py  0004_chapatransaction_payment_title.py
